# template-hex-rust

./: .env.example  .gitignore  .rules  AGENTS.md  Cargo.toml  GEMINI.md  INFRASTRUCTURE.md  LICENCE.md  README.md  sonar-project.properties
src/: config.rs  ctx.rs  envs.rs  main.rs
src/api/: models.rs
src/application/: order.rs  orders.rs  product.rs  products.rs  user.rs  users.rs
src/domain/: country.rs  error.rs  errors.rs  mod.rs  order.rs  orders.rs  pagination.rs  product.rs  products.rs  users.rs  wrapper.rs
src/domain/core/: error.rs  mod.rs  pagination.rs  wrapper.rs
src/domain/entities/: example.rs  example2.rs  mod.rs
src/domain/port/: order.rs  product.rs  user.rs
src/domain/ports/: example2_port.rs  example_port.rs  health_port.rs  mod.rs  order.rs  product.rs  user.rs
src/domain/transformers/: mod.rs  pubsub.rs
src/implementation/: example2_service.rs  example_service.rs  health_service.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/http/: error.rs  helpers.rs  mod.rs  parser.rs  response.rs  routes.rs
src/infrastructure/http/dto/: example2_dto.rs  example_dto.rs  helpers_dto.rs  mod.rs
src/infrastructure/http/dto/example/: request.rs  response.rs
src/infrastructure/http/dto/example2/: request.rs  response.rs
src/infrastructure/http/handlers/: handler_example.rs  handler_example2.rs  mod.rs
src/infrastructure/http/middlewares/: mod.rs  request_id.rs
src/infrastructure/persistence/: example2_repo.rs  example_repo.rs  health_repo.rs  mod.rs  orders.rs  products.rs  users.rs
src/infrastructure/persistence/order/: model.rs  repository.rs
src/infrastructure/persistence/orders/: mod.rs  model.rs  repository.rs
src/infrastructure/persistence/product/: model.rs  repository.rs
src/infrastructure/persistence/products/: mod.rs  model.rs  repository.rs
src/infrastructure/persistence/user/: model.rs  repository.rs
src/infrastructure/persistence/users/: mod.rs  model.rs  repository.rs
src/infrastructure/providers/: mod.rs  mongo.rs  prv_mongo.rs  prv_pubsub.rs  prv_redis.rs  prv_storage.rs  prv_tasks.rs  redis_provider.rs  tasks.rs  telemetry.rs
src/infrastructure/serde/: chrono_bson.rs  mod.rs
src/presentation/: mod.rs  openapi.rs  server.rs  state.rs
src/presentation/http/: error.rs  mod.rs  response.rs  validation.rs
src/presentation/http/order/: routes.rs
src/presentation/http/order/dtos/: input.rs  output.rs
src/presentation/http/orders/: dtos.rs  routes.rs
src/presentation/http/orders/dtos/: input.rs  output.rs
src/presentation/http/product/: routes.rs
src/presentation/http/product/dtos/: output.rs
src/presentation/http/products/: dtos.rs  mod.rs  routes.rs
src/presentation/http/products/dtos/: input.rs  output.rs
src/presentation/http/user/: routes.rs
src/presentation/http/user/dtos/: input.rs  output.rs
src/presentation/http/users/: dtos.rs  routes.rs
src/presentation/http/users/dtos/: input.rs  output.rs
src/tools/: dbg.rs  mod.rs  telemetry.rs  tracer.rs
