[package]
name = "hex-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
base64 = "0"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
mongodb = { version = "3", features = ["sync", "dns-resolver"] }
redis = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { version = "0.1", features = ["valuable"] }
tracing-serde = { version = "0.2", features = ["valuable-serde"] }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "fmt",
    "valuable",
    "env-filter",
] }
tracing-stackdriver = { version = "0.10", features = [
    "opentelemetry",
    "valuable-serde",
] }
tracing-opentelemetry = "0"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-gcloud-trace = "0.21"
opentelemetry-semantic-conventions = "0.30.0"
rand = "0.9"
async-trait = "0.1"
valuable = { version = "0.1", features = ["derive"] }
axum-extra = "0.10.1"
google-cloud-tasks-v2 = "0.4"
