[package]
name = "service"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3

[dependencies]
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
] }
anyhow = "1"
thiserror = "1"
base64 = "0"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
mongodb = { version = "3", features = ["sync", "dns-resolver"] }
redis = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["valuable"] }
tracing-serde = { version = "0.2", features = ["valuable-serde"] }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "fmt",
    "valuable",
    "env-filter",
] }
tracing-stackdriver = { version = "0.10", features = [
    "opentelemetry",
    "valuable-serde",
] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31"
opentelemetry-gcloud-trace = "0.22"
opentelemetry-semantic-conventions = "0.31"
rand = "0.9"
async-trait = "0.1"
valuable = { version = "0.1", features = ["derive"] }
google-cloud-tasks-v2 = "0.5"
