[package]
name = "service"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Web Framework (REST)
axum = "0.8"
tower = { version = "0.5", features = ["util", "make"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "timeout",
    "compression-gzip",
    "decompression-gzip",
] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization / Validation
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }

# Database (Drivers)
mongodb = { version = "3", features = [
    "bson-3",
    "rustls-tls",
    "dns-resolver",
    "sync",
] }
bson = { version = "3", features = ["chrono-0_4", "serde"] }
redis = { version = "1", features = ["aio", "tokio-comp"] }

# Observability (Stable)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "fmt",
    "env-filter",
] }
tracing-stackdriver = { version = "0.10", features = ["opentelemetry"] }
tracing-opentelemetry = "0.32"

# OpenTelemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31"
opentelemetry-gcloud-trace = "0.22"
opentelemetry-semantic-conventions = "0.31"

# Utils / Types
rustls = "0.23"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

# Error Handling
thiserror = "2"
anyhow = "1"

# Documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
